# simplr

./: .pre-commit-config.yaml  README.md  pyproject.toml
simplr/: model.py
