[tool.poetry]
name = "simplr"
version = "0.1.0"
description = ""
authors = ["griffin-walker <griffin.walker@mac.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
